--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site for information and reviews of TV Shows and Movies, created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/1905072333.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>Show Holic - 影劇評價情報站</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
